@@ -5,42 +5,43 @@ import static org.junit.jupiter.api.Assertions.assertFalse;
 import static org.junit.jupiter.api.Assertions.assertTrue;
 import static seedu.address.logic.Messages.MESSAGE_CONTACT_LISTED_OVERVIEW;
 import static seedu.address.logic.commands.CommandTestUtil.assertCommandSuccess;
-import static seedu.address.testutil.TypicalContacts.ALICE;
-import static seedu.address.testutil.TypicalContacts.BENSON;
-import static seedu.address.testutil.TypicalContacts.DANIEL;
+import static seedu.address.testutil.TypicalContacts.CARL;
+import static seedu.address.testutil.TypicalContacts.ELLE;
+import static seedu.address.testutil.TypicalContacts.FIONA;
 import static seedu.address.testutil.TypicalContacts.getTypicalCodeConnect;
 
 import java.util.Arrays;
 import java.util.Collections;
-import java.util.List;
 
 import org.junit.jupiter.api.Test;
 
 import seedu.address.model.Model;
 import seedu.address.model.ModelManager;
 import seedu.address.model.UserPrefs;
-import seedu.address.model.contact.TagsContainKeywordsPredicate;
+import seedu.address.model.contact.TsContainsKeywordsPredicate;
 
 /**
- * Contains integration tests (interaction with the Model) for {@code FindTagCommand}.
+ * Contains integration tests (interaction with the Model) for {@code FindTechStackCommand}.
  */
-public class FindTagCommandTest {
+public class FindTechStackCommandTest {
     private Model model = new ModelManager(getTypicalCodeConnect(), new UserPrefs());
     private Model expectedModel = new ModelManager(getTypicalCodeConnect(), new UserPrefs());
 
     @Test
     public void equals() {
-        List<String> firstPredicate = Collections.singletonList("first");
-        List<String> secondPredicate = Collections.singletonList("second");
+        TsContainsKeywordsPredicate firstPredicate =
+                new TsContainsKeywordsPredicate(Collections.singletonList("first"));
+        TsContainsKeywordsPredicate secondPredicate =
+                new TsContainsKeywordsPredicate(Collections.singletonList("second"));
 
-        FindTagCommand findFirstCommand = new FindTagCommand(firstPredicate);
-        FindTagCommand findSecondCommand = new FindTagCommand(secondPredicate);
+        FindTechStackCommand findFirstCommand = new FindTechStackCommand(firstPredicate);
+        FindTechStackCommand findSecondCommand = new FindTechStackCommand(secondPredicate);
 
         // same object -> returns true
         assertTrue(findFirstCommand.equals(findFirstCommand));
 
         // same values -> returns true
-        FindTagCommand findFirstCommandCopy = new FindTagCommand(firstPredicate);
+        FindTechStackCommand findFirstCommandCopy = new FindTechStackCommand(firstPredicate);
         assertTrue(findFirstCommand.equals(findFirstCommandCopy));
 
         // different types -> returns false
@@ -49,16 +50,15 @@ public class FindTagCommandTest {
         // null -> returns false
         assertFalse(findFirstCommand.equals(null));
 
-        // different contact -> returns false
+        // different person -> returns false
         assertFalse(findFirstCommand.equals(findSecondCommand));
     }
 
     @Test
     public void execute_zeroKeywords_noContactFound() {
         String expectedMessage = String.format(MESSAGE_CONTACT_LISTED_OVERVIEW, 0);
-        List<String> tagKeywords = List.of("Acquaintances");
-        TagsContainKeywordsPredicate predicate = new TagsContainKeywordsPredicate(tagKeywords);
-        FindTagCommand command = new FindTagCommand(tagKeywords);
+        TsContainsKeywordsPredicate predicate = preparePredicate(" ");
+        FindTechStackCommand command = new FindTechStackCommand(predicate);
         expectedModel.updateFilteredContactList(predicate);
         assertCommandSuccess(command, model, expectedMessage, expectedModel);
         assertEquals(Collections.emptyList(), model.getFilteredContactList());
@@ -67,19 +67,25 @@ public class FindTagCommandTest {
     @Test
     public void execute_multipleKeywords_multipleContactsFound() {
         String expectedMessage = String.format(MESSAGE_CONTACT_LISTED_OVERVIEW, 3);
-        List<String> tagKeywords = List.of("friends");
-        TagsContainKeywordsPredicate predicate = new TagsContainKeywordsPredicate(tagKeywords);
-        FindTagCommand command = new FindTagCommand(tagKeywords);
+        TsContainsKeywordsPredicate predicate = preparePredicate("Kurz Elle Kunz");
+        FindTechStackCommand command = new FindTechStackCommand(predicate);
         expectedModel.updateFilteredContactList(predicate);
         assertCommandSuccess(command, model, expectedMessage, expectedModel);
-        assertEquals(Arrays.asList(ALICE, BENSON, DANIEL), model.getFilteredContactList());
+        assertEquals(Arrays.asList(CARL, ELLE, FIONA), model.getFilteredContactList());
     }
 
     @Test
     public void toStringMethod() {
-        List<String> tagKeywords= List.of("School", "Work");
-        FindTagCommand FindTagCommand = new FindTagCommand(tagKeywords);
-        String expected = FindTagCommand.class.getCanonicalName() + "{predicate=" + tagKeywords + "}";
-        assertEquals(expected, FindTagCommand.toString());
+        TsContainsKeywordsPredicate predicate = new TsContainsKeywordsPredicate(Arrays.asList("keyword"));
+        FindTechStackCommand findTechStackCommand = new FindTechStackCommand(predicate);
+        String expected = FindTechStackCommand.class.getCanonicalName() + "{predicate=" + predicate + "}";
+        assertEquals(expected, findTechStackCommand.toString());
+    }
+
+    /**
+     * Parses {@code userInput} into a {@code NameContainsKeywordsPredicate}.
+     */
+    private TsContainsKeywordsPredicate preparePredicate(String userInput) {
+        return new TsContainsKeywordsPredicate(Arrays.asList(userInput.split("\\s+")));
     }
 }
